# fadaka-blockchain

./: .bash  .env  1_deploy_contracts.js  App.js  Auth.js  CMakeLists.txt  Clone.sh  Ether.js  Fadaka.db  Fadaka.nimble  Flake.nix  Generate.py  Layer2.js  Makefile  Package.json  Public-key.py  README.md  React.jsx  Server.js  Task.py  TrustWalletIntegration.js  api_wrapper.go  app.js  auth_tokens.csv  bash  bash.sh  cargo.toml  connection.go  gen_cert.go  go.mod  hardhat.config.js  index.html  main.cpp  main.go  main.py  metamask.js  registry_server.go  run_deployment_script.sh  rust.go  signal_netbsd_arm64.go  (+3 more)
.ci/: build_wallet_core.yml
Api/: App.js  Index.js
App/: RODA 2.js  infura.js
Asset/: Style.css
Blockchain/: Block.js  Blockchain.js  ProofOfwork.js  Transaction.js  go.mod  install_dependecies.sh  run_deployment_script.sh
Components/: Header.js  LanguageSwitcher.js  Transaction.js  Wallet.js
Config/: Config.js
Context/: IntlContext.js
EIP-7702/: .vim
I18n/: Index.js  en.json  es.json  fr.json
Network_Communication/: Connection.go  registry.go
Node/: stream.mjs
Page/: API.js
Pages/: Cryptoprice.js  index.js
Public/: HDwallet.html  fadaka-wallet.html  swift-beta-wallet.html
Solidity/: Cross-chain.sol  contract.sol  decentralized.sol
Test/: Blockchain.test.js  test.js
UI/: Walletgeberator.jsx  app.js
Utils/: CryptoUtils.js
Wallet/: HD-wallet.js  Wallet.js
Wallet_Management/: createWallet.go
apps/: Index.js
apps/fadaka/: CMakeLists.txt
backend/: main.go
bash/: build.sh
component/: AIFunctions.js
contracts/: DAO.sol  Decentralized_Insurance_Pool.sol  Dynamic_Pricing.sol  ERC20.sol  ERC721.sol  EducationGrant.sol  Fadakatoken.sol  Fans_Engagement_Rewards.sol  GovernmentGrant.sol  Loan.sol  Lottery.sol  NFTmarket.sol  Oracle.sol  PlayerTransfer.sol  Projectcrowdfunding.sol  RealEstate.sol  ReputationBasedLending.sol  Royalty.sol  SavingsAccount.sol  Scholarship.sol  Sponsorship.sol  SportsBetting.sol  Staking.sol  StateAllocation.sol  StudentLoan.sol  Subscription.sol  SupplyChain.sol  Swap-fadaka.sol  bank.sol  bash.sh  certification.sol  content_licensing.sol  crowdfunding.sol  fadaka.sol  fadakatoken.sol
docker/: fadaka-devkit.Dockerfile
foundryup/: install.sh
go/: connection.go  validate.go
migrations/: deploy_contracts.js
scripts/: Deploy.js  args.js  deploy-fadaka-token.js  hardhat.config.js  interact.js  verify.js
src/: App.js  P2pnetworking.js  blockchain.js  consensus.js  fadaka_node.nim  lib.rs  transaction.js
tools/: go.mod  (+1 more)
(+16 files in other folders)
